tests/rosetta/out/Pascal/call-a-function-1.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/call-a-function-1.pas
call-a-function-1.pas(10,33) Error: Identifier not found "any"
call-a-function-1.pas(10,36) Error: Type identifier expected
call-a-function-1.pas(28) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
