tests/rosetta/out/Pascal/call-a-function-1.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T10:01:31Z
program CallAFunction1;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function f(): specialize TArray<any>;
begin
  result := specialize TArray<integer>([0, 0]);
  exit;
end;

function g(a: integer; b: double): integer;
begin
  result := 0;
  exit;
end;

function h(s: string; nums: specialize TArray<integer>): integer;
begin
end;

begin
end.
